--- a/views/admin-edit-product.ejs
+++ b/views/admin-edit-product.ejs
@@ -22,16 +22,16 @@
         </div>
 
         <div class="categories">
-          <a href="/admin/products/hamburger" class="btn category">
+          <a href="/admin/products/Hamburger" class="btn category">
             <img src="/images/hamburger.png" alt="hamburger" />
           </a>
-          <a href="/admin/products/pizza" class="btn visited category">
+          <a href="/admin/products/Pizza" class="btn visited category">
             <img src="/images/pizzamin.png" alt="" />
           </a>
-          <a href="/admin/products/crepe" class="btn category">
+          <a href="/admin/products/Crepe" class="btn category">
             <img src="/images/crepe.png" alt="" />
           </a>
-          <a href="/admin/products/drinks" class="btn category">
+          <a href="/admin/products/Drinks" class="btn category">
             <img src="/images/sandwich.png" alt="" />
           </a>
         </div>
