session stored in database

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -45,6 +45,7 @@
             <li><a href="/" class="selected">Foo</a><span>d</span></li>
             <li><a href="/about">About </a><span>Us</span></li>
             <li><a href="#">Contact </a><span>Us</span></li>
+            <li><a href="/admin/logout">Log out</li>
           </ul>
         </div>
         <!-- Hero -->
