--- a/views/admin-edit-product.ejs
+++ b/views/admin-edit-product.ejs
@@ -44,6 +44,7 @@
             <li><a href="/" class="selected">Foo</a><span>d</span></li>
             <li><a href="/about">About </a><span>Us</span></li>
             <li><a href="#">Contact </a><span>Us</span></li>
+            <li><a href="#">Log out</li>
           </ul>
         </div>
         <!-- Hero -->
