auth session done

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -45,6 +45,9 @@
             <li><a href="/" class="selected">Foo</a><span>d</span></li>
             <li><a href="/about">About </a><span>Us</span></li>
             <li><a href="#">Contact </a><span>Us</span></li>
+          </ul>
+          <ul>
+            <li><a href="#"><%=username %></li>
             <li><a href="/admin/logout">Log out</li>
           </ul>
         </div>
