--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -12,5 +12,10 @@
       <input type="password" name="password" placeholder="password" />
       <button type="submit">Login</button>
     </form>
+    <form action="/admin/signup" method="post">
+      <input type="text" name="username" placeholder="username" />
+      <input type="password" name="password" placeholder="password" />
+      <button type="submit">Sign Up</button>
+    </form>
   </body>
 </html>
