--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -47,8 +47,8 @@
             <li><a href="#">Contact </a><span>Us</span></li>
           </ul>
           <ul>
-            <li><a href="#"><%=username %></li>
-            <li><a href="/admin/logout">Log out</li>
+            <li><a href="#"> <%=username %> </a></li>
+            <li><a href="/admin/logout">Log out </a></li>
           </ul>
         </div>
         <!-- Hero -->
