Error messages added

--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -8,6 +8,8 @@
   </head>
   <body>
     <form action="/admin/login" method="post">
+      <h1><%=error%></h1>
+      <h1><%=message%></h1>
       <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
       <input type="text" name="username" placeholder="username" />
       <input type="password" name="password" placeholder="password" />
