--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -47,7 +47,7 @@
             <li><a href="#">Contact </a><span>Us</span></li>
           </ul>
           <ul>
-            <li><a href="#"> <%=username %> </a></li>
+            <li><a href="#"> <%=username.split('@')[0].toUpperCase() %> </a></li>
             <li><a href="/admin/logout">Log out </a></li>
           </ul>
         </div>
