Serving files to authenticated user only

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -48,6 +48,7 @@
           </ul>
           <ul>
             <li><a href="#"> <%=username.split('@')[0].toUpperCase() %> </a></li>
+            <img id="profile-picture" src="/admin/profile-picture" alt="">
             <li><a href="/admin/logout">Log out </a></li>
           </ul>
         </div>
