--- a/views/admin-edit-product.ejs
+++ b/views/admin-edit-product.ejs
@@ -18,21 +18,21 @@
       <div class="sidemenu">
         <!-- Todo  -->
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="/images/logo/logo.png" alt="" />
         </div>
 
         <div class="categories">
           <a href="/admin/products/Hamburger" class="btn category">
-            <img src="/images/hamburger.png" alt="hamburger" />
+            <img src="/images/category/hamburger.png" alt="hamburger" />
           </a>
           <a href="/admin/products/Pizza" class="btn visited category">
-            <img src="/images/pizzamin.png" alt="" />
+            <img src="/images/category/pizzamin.png" alt="" />
           </a>
           <a href="/admin/products/Crepe" class="btn category">
-            <img src="/images/crepe.png" alt="" />
+            <img src="/images/category/crepe.png" alt="" />
           </a>
           <a href="/admin/products/Drinks" class="btn category">
-            <img src="/images/sandwich.png" alt="" />
+            <img src="/images/category/sandwich.png" alt="" />
           </a>
         </div>
       </div>
