--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,22 +18,22 @@
       <div class="sidemenu">
         <!-- Todo  -->
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="/images/logo/logo.png" alt="" />
         </div>
         <div class="categories">
           <a href="./Hamburger" class="btn <%= category ==='Hamburger' ? 'visited' : '' %> category">
-            <img src="/images/hamburger.png" alt="hamburger" />
+            <img src="/images/category/hamburger.png" alt="hamburger" />
           </a>
           <a href="./Pizza" class="btn <%= category ==='Pizza' ? 'visited' : '' %>  category">
-            <img src="/images/pizzamin.png" alt="" />
+            <img src="/images/category/pizzamin.png" alt="" />
           </a>
           
 
           <a href="./Crepe" class="btn  <%= category ==='Crepe' ? 'visited' : '' %> category">
-            <img src="/images/crepe.png" alt="" />
+            <img src="/images/category/crepe.png" alt="" />
           </a>
           <a href="./Drinks"class="btn <%= category ==='Drinks' ? 'visited' : '' %> category">
-            <img src="/images/sandwich.png" alt="" />
+            <img src="/images/category/sandwich.png" alt="" />
           </a>
         </div>
       </div>
