--- a/views/admin-edit-product.ejs
+++ b/views/admin-edit-product.ejs
@@ -85,8 +85,8 @@
                   <i class="fas fa-upload"></i>  Choose a photo</label> -->
                 <input
                   type="hidden"
-                  name="category"
-                  value="<% if(!newItem){ %><%=product.category%> <% } %>"
+                  name="categoryName"
+                  value="<% if(!newItem){ %><%=category%> <% } %>"
                 />
                 <input
                   type="hidden"
