--- a/views/admin-edit-product.ejs
+++ b/views/admin-edit-product.ejs
@@ -22,18 +22,14 @@
         </div>
 
         <div class="categories">
-          <a href="/admin/products/Hamburger" class="btn category">
-            <img src="/images/category/hamburger.png" alt="hamburger" />
-          </a>
-          <a href="/admin/products/Pizza" class="btn visited category">
-            <img src="/images/category/pizzamin.png" alt="" />
-          </a>
-          <a href="/admin/products/Crepe" class="btn category">
-            <img src="/images/category/crepe.png" alt="" />
-          </a>
-          <a href="/admin/products/Drinks" class="btn category">
-            <img src="/images/category/sandwich.png" alt="" />
-          </a>
+          <% for (let i = 0; i < categories.length; i++) { %>
+            <a
+              href="/admin/products/<%=categories[i].name%>"
+              class="category btn <%= category === categories[i].name ? 'visited' : '' %>"
+            >
+              <img src="<%=categories[i].image%>" alt="" />
+            </a>
+            <% } %>
         </div>
       </div>
 
@@ -51,7 +47,7 @@
         <div class="hero">
           <div class="products-container">
             <form
-              action="/admin/products/Pizza/<% if(newItem){ %><%=0%><% }else{ %>   <%= product.id %> <% } %>/edit"
+              action="/admin/products/<%=category%>/<% if(newItem){ %><%=0%><% }else{ %>   <%= product.id %> <% } %>/edit"
               method="post" enctype="multipart/form-data"
             >
               <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
@@ -101,7 +97,7 @@
 
             <div class="product-image">
               <form
-                action="/admin/products/<%=product.category%>/<%=product.id%>/delete"
+                action="/admin/products/<%=category%>/<%=product.id%>/delete"
                 method="post"
               >
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
